gitops/apps/fresh-portal/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fresh-portal
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: staging
